Implementation of XWingStrategy

--- a/Sudoku/Sudoku.csproj
+++ b/Sudoku/Sudoku.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Strategy\PointingReductionStrategy.cs" />
     <Compile Include="Strategy\RemoveImpossibleStrategy.cs" />
     <Compile Include="Strategy\SolvedCellStrategy.cs" />
+    <Compile Include="Strategy\XWingStrategy.cs" />
     <Compile Include="Strategy\YWingStrategy.cs" />
     <Compile Include="Unit.cs" />
   </ItemGroup>
